--- a/vercel.json
+++ b/vercel.json
@@ -1,4 +1,11 @@
 {
   "name": "usdtukr",
   "version": "1.0.0",
+  "scripts": {
+  "dev": "next dev",
+  "build": "next build",
+  "start": "next start",
+  "lint": "next lint",
+  "type-check": "tsc --noEmit"
+},
 }
